# sensimanager

./: .env.example  .gitignore  Dockerfile  Dockerfile.stream  Dockerfile.swos-port  README.md  docker-compose.yml  pyproject.toml  run_swos420.py
config/: dosbox.conf  league_structure.json  rules.json
contracts/: PlayerNFT.sol  foundry.toml
docs/: AI_TRAINING_STRATEGY_AND_DIFFICULTY.md  DEPLOYMENT_STATUS_2026-02-18.md  LAUNCH_CHECKLIST.md  NEXT_STEPS_MASTER_PLAN.md  PLAN_OF_DELIVERY_v4.0.md  PRD.md  SWOS420_GROK420_MASTER.md  SWOS420_MASTER_BLUEPRINT.md  SWOS420_USERS_GUIDE.md  x-threads.md
frontend/: package-lock.json  package.json
scripts/: add_arwyn_hughes.py  apply_club_bias.py  benchmark_managers.py  distribute_wages.py  export_edt.py  export_to_ag_swsedt.py  mint_from_db.py  nft_edt_sync.py  run_full_season.py  run_match.py  serve_overlay.py  settle_season.py  smoke_pipeline.py  stream_league.py  stress_yield_sustainability.py  train_managers.py  update_db.py  update_form_batch.py
streaming/: events.json  obs_pipeline.sh  obs_scene.json  overlay.html  scoreboard.json  table.json
tests/: test_actions.py  test_ad_manager.py  test_ai_benchmark.py  test_ai_dosbox_controller.py  test_ai_env.py  test_commentary.py  test_coverage_gaps.py  test_db.py  test_dosbox_runner.py  test_economy.py  test_edt_binary.py  test_importers.py  test_integration.py  test_league_runtime.py  test_llm_commentary.py  test_mapping.py  test_match_sim.py  test_models.py  test_normalization.py  test_runtime_guard.py  test_scouting.py  test_season_runner.py  test_smoke_pipeline.py  (+4 more)
(+79 files in other folders)
