[build-system]
requires = ["setuptools>=75.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "swos420"
version = "0.1.0"
description = "SWOS420 — AI Sensible World of Soccer League with NFT Ownership & $CM Economy"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
dependencies = [
    "pydantic>=2.0",
    "pandas>=2.0",
    "numpy>=1.26",
    "sqlalchemy>=2.0",
    "unidecode>=1.3",
    "requests>=2.31",
]

[project.optional-dependencies]
ai = [
    "pettingzoo>=1.24",
    "gymnasium>=1.0",
    "stable-baselines3>=2.0",
    "supersuit>=3.9",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 100
